src/styles/layout.scss
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@200;300;400;500;600;700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;700&display=swap");

// 1. Import the initial variables
@import "~bulma/sass/utilities/initial-variables.sass";
@import "~bulma/sass/utilities/functions.sass";

//Font & text
$family-serif: "Ubuntu", sans-serif;
$family-titles: "Quicksand", sans-serif;
$family-primary: $family-serif;
$family-secondary: $family-titles;

$size-1: 4.2rem;

//Color
$primary: #268b52;
$primary-light: #91dfac;

$brown: #5a351f;
$brown-invert: findColorInvert($brown);
$brown-light: #d1a36e;

$dark-color: #0a232d;
$dark: $dark-color;

$light: rgb(250, 250, 250);
$light-invert: findColorInvert($light);

$link: $brown-light;
$link-hover: $brown;

$background: $primary-light;

$panel-item-border: 0;
$panel-radius: 0;

$hr-height: 1px;

$card-shadow: 0 0.5em 1em -0.125em rgba(#000000, 0.4),
  0 0px 0 1px rgba(#000000, 0.08);

@import "~bulma/sass/utilities/derived-variables.sass";
$addColors: (
  "secondary": (
    $brown,
    $brown-invert,
  ),
);
$colors: map-merge($colors, $addColors);

@import "~bulma/bulma.sass";
@import "./divider.css";
@import "./background.css";

.no-hover {
  pointer-events: none;
}

html {
  background-color: $primary-light;
  
}
html, body {
  overflow-x: hidden;
}

//Footer 
footer {
  a {
    color: $dark-color;
    &:hover {
      color: $primary;
    }
  }
}

.nav-lemur {
  width: 12vh;
  height: 12vh;
  position: fixed;
  left: 0;
  top: 0;
  background-color: $dark-color;
  border-radius: 0 0 100% 0;
  box-shadow: 0 0.5em 1em -0.125em rgba(#000000, 0.6),
    0 0px 0 1px rgba(#000000, 0.15);
  z-index: 3;

  img {
    width: 85%;
    height: 85%;
    position: absolute;
    left: 3%;
    z-index: 5;
    top: -5%;
  }

  .nav-panel {
    position: relative;
    top: -27vh;
    left: 0;
    min-width: 100%;
    border-radius: 0 0 7px 0;
    z-index: 2;
    height: 27vh;
    
    transform: translate(0px);
    transform-origin: bottom;
    -webkit-transition: transform 0.15s ease-in;
    transition: transform 0.15s ease-in;

    .nav-text {
      opacity: 0;
      -webkit-transition: opacity 0.22s ease-in 0.12s;
      transition: opacity 0.22s ease-in 0.12s;
    }
    .nav-show-text {
      opacity: 1;
    }

    .panel-block {
      a {
        color: $primary-light;
      }
      a:hover {
        color: $primary;
      }
    }
  }
  .nav-show-panel {
    transform: translate(0px, 26vh);
    box-shadow: 0 0.5em 1em -0.125em rgba(#000000, 0.6),
    0 0px 0 1px rgba(#000000, 0.15);
  }
}

section#header.hero .hero-body {
  text-shadow: 0.15em 0.15em 0.5em rgba($dark-color, 1),
    -1px -1px 2px rgba($dark-color, 1), 1px -1px 2px rgba($dark-color, 1),
    -1px 1px 2px rgba($dark-color, 1), 1px 1px 2px rgba($dark-color, 1);
}

section.hero,
.hero-foot,
nav {
  position: sticky;
}

//portfolio

section#portfolio .card {
  background-color: $dark;
  border: 1px solid $primary-light;

  // a {
  //   color: $primary;
  //   &:hover {
  //     color: $brown;
  //   }
  // }

}

//sezioni home
section#work {

  margin-top: 11vh;

  section {
    position: relative;
  }
  section::before {
    content: "";
    position: absolute;
    width: 160%;
    height: 120%;
    top: -7%;
    left: -50%;
    z-index: -1;
  }
  section#orientate {
    h2 {
      color: $primary-light;
    }
    h4 {
      color: $primary-light;
    }
    h6 {
      color: $white;
    }
    
    color: white;
    &:before {
      background-color: $brown;
      -webkit-transform: rotate(-2deg);
      -moz-transform: rotate(-2deg);
      -ms-transform: rotate(-2deg);
      -o-transform: rotate(-2deg);
      transform: rotate(-2deg);
    }
  }
  section#explore {
    h2 {
      color: $dark;
    }
    h4 {
      color: $dark;
    }
    h6 {
      color: $brown;
    }
    color: $brown;
    &:before {
      background-color: $primary-light;
      -webkit-transform: rotate(2deg);
      -moz-transform: rotate(2deg);
      -ms-transform: rotate(2deg);
      -o-transform: rotate(2deg);
      transform: rotate(2deg);
    }
  }
  section#build {
    h2 {
      color: $primary;
    }
    h4 {
      color: $primary;
    }
    h6 {
      color: $dark;
    }
    color: $dark;
    &:before {
      background-color: $white;
      -webkit-transform: rotate(-2deg);
      -moz-transform: rotate(-2deg);
      -ms-transform: rotate(-2deg);
      -o-transform: rotate(-2deg);
      transform: rotate(-2deg);
      height: 110%;
    }
  }
}

